--- a/src/HTML/a.html
+++ b/src/HTML/a.html
@@ -4,13 +4,34 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script>
-        var timerId=setInterval(function(){
-            document.write("wk大傻逼")
-        },2000)
-        clearInterval(timerId)
+        // let endTime = new Date("2024-11-11 00:00:00");      //获取结束时间
+        //
+        // // 创建一个setInterval定时器
+        // var intervalId = setInterval(function() {
+        //
+        //
+        //     let startTime = new Date();                        //获取开始时间
+        //
+        //     let differenceInMilliseconds = endTime-startTime;    //计算时间差
+        //
+        //     var sec = Math.floor((differenceInMilliseconds%(60*1000)) / 1000);
+        //     var min = Math.floor((differenceInMilliseconds%(60*60*1000)) / (60*1000));
+        //     var hour = Math.floor((differenceInMilliseconds%(60*60*24*1000)) / (60*60*1000));
+        //     var day = Math.floor(differenceInMilliseconds / (60*60*24*1000));
+        //     // 打印结果
+        //     let str = '倒计时：' + day + '天 ' + hour + '小时 ' + min + '分钟 ' + sec + '秒';
+        //     let p = document.getElementById("time")
+        //     p.innerText = str;
+        // }, 1000);
+        history.pushState(null, null, "?a=check");
+        history.pushState(null, null, "?a=history");
+        history.replaceState(null, null, "?p=1");
+
     </script>
 </head>
 <body>
+<p id="time">
 
+</p>
 </body>
 </html>
